# NW-Provision

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/nw_provision/: avrdude.py  cli.py  devices.py  page0.py  registry.py
src/nw_provision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_avrdude.py  test_cli.py  test_page0.py  test_registry.py
